--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -317,4 +317,6 @@ input {
     padding-bottom: 30%; /* This will make the height equal to the width, creating a square */
 }
 
-
+.error {
+    color: red;
+}
