changed social media links

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer>
     <div class="footer">
         <div class="socialicons">
-            <a href="https://www.facebook.com/felix.tse.94/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/ferix999"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/senecapoly"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/senecapoly"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://twitter.com/SenecaPoly"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.youtube.com/@SenecaPoly"><i class="fa-brands fa-youtube"></i></a>
         </div>
